--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,7 +1,39 @@
 en:
   angulate:
-    validation:
-      errors:
-        presence: "%{model} can't be blank"
-        format: '%{model} is invalid'
-        length: '%{model} is too long'
+    errors:
+      # * Lifted from ActiveModel *
+      # The default format to use in full error messages.
+      format: "%{attribute} %{message}"
+
+      # The values :model, :attribute and :value are always available for interpolation
+      # The value :count is available when applicable. Can be used for pluralization.
+      messages:
+        presence: "%{attribute} can't be blank"
+        too_long:
+          one: "is too long (maximum is 1 character)"
+          other: "is too long (maximum is %{count} characters)"
+        too_short:
+          one: "is too short (minimum is 1 character)"
+          other: "is too short (minimum is %{count} characters)"
+        wrong_length:
+          one: "is the wrong length (should be 1 character)"
+          other: "is the wrong length (should be %{count} characters)"
+        format: "%{attribute} is invalid"
+        # --
+        inclusion: "is not included in the list"
+        exclusion: "is reserved"
+        invalid: "is invalid"
+        confirmation: "doesn't match %{attribute}"
+        accepted: "must be accepted"
+        empty: "can't be empty"
+        present: "must be blank"
+        not_a_number: "is not a number"
+        not_an_integer: "must be an integer"
+        greater_than: "must be greater than %{count}"
+        greater_than_or_equal_to: "must be greater than or equal to %{count}"
+        equal_to: "must be equal to %{count}"
+        less_than: "must be less than %{count}"
+        less_than_or_equal_to: "must be less than or equal to %{count}"
+        other_than: "must be other than %{count}"
+        odd: "must be odd"
+        even: "must be even"
